; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_livetree.c_propval_cell.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_livetree.c_propval_cell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.property = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @propval_cell(%struct.property* %0) #0 {
  %2 = alloca %struct.property*, align 8
  store %struct.property* %0, %struct.property** %2, align 8
  %3 = load %struct.property*, %struct.property** %2, align 8
  %4 = getelementptr inbounds %struct.property, %struct.property* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = sext i32 %6 to i64
  %8 = icmp eq i64 %7, 4
  %9 = zext i1 %8 to i32
  %10 = call i32 @assert(i32 %9)
  %11 = load %struct.property*, %struct.property** %2, align 8
  %12 = getelementptr inbounds %struct.property, %struct.property* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to i32*
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @fdt32_to_cpu(i32 %16)
  ret i32 %17
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fdt32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
